--- a/app/src/main/res/layout/activity_quizz.xml
+++ b/app/src/main/res/layout/activity_quizz.xml
@@ -27,18 +27,18 @@
         android:text="Crazy Quizz"
         android:textColor="@color/white"
         android:textSize="36sp"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="77dp" />
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="82dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="343dp"
-        android:layout_height="244dp"
+        android:layout_width="356dp"
+        android:layout_height="498dp"
         android:background="@color/purple_200"
         android:gravity="clip_vertical"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="217dp">
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="173dp">
 
         <TextView
             android:id="@+id/textView2"
@@ -58,27 +58,52 @@
             android:text="Question 1"
             android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="66dp"
+            android:text="TextView" />
+
         <Button
-            android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bowlby_one"
             android:text="Question 2"
             android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="TextView" />
+
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bowlby_one"
-            android:text="Question 3" />
+            android:text="Question 3"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:text="TextView" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bowlby_one"
-            android:text="Question 4" />
+            android:text="Question 4"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:text="TextView" />
 
         <Button
             android:id="@+id/button2"
