--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_500"
     tools:context=".MainActivity">
 
 
@@ -16,29 +17,102 @@
         android:textColor="@color/purple_200"
         android:textSize="40dp">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Jouer"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="281dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_200"
+        android:fontFamily="@font/bowlby_one"
         android:text="Crazy Quizz"
-        tools:layout_editor_absoluteX="165dp"
-        tools:layout_editor_absoluteY="128dp" />
+        android:textColor="@color/white"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="82dp" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mes scores"
-        tools:layout_editor_absoluteX="130dp"
-        tools:layout_editor_absoluteY="424dp" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="356dp"
+        android:layout_height="498dp"
+        android:background="@color/purple_200"
+        android:gravity="clip_vertical"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="173dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/purple_500"
+            android:fontFamily="@font/bowlby_one"
+            android:text="00:30"
+            android:textColor="@color/white"
+            android:textSize="36sp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/bowlby_one"
+            android:text="Question 1"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="66dp"
+            android:text="TextView" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/bowlby_one"
+            android:text="Question 2"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/bowlby_one"
+            android:text="Question 3"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/bowlby_one"
+            android:text="Question 4"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_weight="1"
+            android:text="Button" />
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
